# bertsheim

./: .copilotconfig.json  BUILD.md  CMakeLists.txt  README.md  build-windows.bat  create-bertsheim.ps1  create-bertsheim2.ps1  setup-windows.bat
ai-models/: prompt_processor.py
build_windows/: CMakeCache.txt
cli/: main.cpp
core/include/: AnalysisModule.h  AudioEngine.h  AutomixEngine.h  MixEngine.h  StemSeparator.h
docs/: INSTALL.md
